# lab3_aks

./: CMakeLists.txt  README.md  compile.sh  integrals.cpp  integrals.h  main.cpp  runner.py
